--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es" class="h-full bg-slate-100">
   <head>
     <meta charset="UTF-8" />
@@ -50,8 +50,7 @@
   <body class="h-full bg-slate-100 antialiased">
     <div id="root"></div>
 
-    <!-- ✅ Script temporal, será reemplazado automáticamente por update-index-html.js -->
-    <script type="module" src="/assets/__VITE_REPLACE__.js"></script>
+    <!-- 🪄 Script marcador temporal. Se reemplaza automáticamente por update-index-html.js -->
+    <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
-
