--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script defer src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
 
-    <!-- Import map (opcional si usas ESM.sh) -->
+    <!-- Import map -->
     <script type="importmap">
       {
         "imports": {
@@ -32,10 +32,9 @@
       }
     </script>
 
-    <!-- CSS generado por Vite -->
+    <!-- Estilos compilados -->
     <link rel="stylesheet" href="/index.css" />
 
-    <!-- Estilos personalizados -->
     <style>
       ::-webkit-scrollbar { width: 8px; height: 8px; }
       ::-webkit-scrollbar-track { background: #f1f1f1; border-radius: 10px; }
@@ -50,7 +49,7 @@
   <body class="h-full bg-slate-100 antialiased">
     <div id="root"></div>
 
-    <!-- 🪄 Script marcador temporal. Se reemplaza automáticamente por update-index-html.js -->
+    <!-- 🪄 Script marcador temporal. Será reemplazado automáticamente por update-index-html.js -->
     <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
